bot placing OK